--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Lato";
   margin: 0;
   font-size: 20px;
   -webkit-font-smoothing: antialiased;
   line-height: 1.3;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Catamaran";
+  font-weight: 800 !important;
+}
+
 a {
-  color: #5334F5;
+  color: #5334f5;
   text-decoration: none;
   font-weight: 600;
 }
@@ -53,7 +63,7 @@ a {
   font-weight: 600;
   color: white;
   text-transform: uppercase;
-  background: rgba(0,0,0, 0.7);
+  background: rgba(0, 0, 0, 0.7);
   padding: 9px 20px;
   border: 1px solid rgba(255, 255, 255, 0.25);
   border-radius: 20px;
@@ -95,7 +105,7 @@ a {
   bottom: 0;
   left: 0;
 }
- 
+
 .Hero .Logos {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -115,7 +125,7 @@ a {
   font-size: 60px;
   text-align: center;
   font-weight: 700;
-  background: linear-gradient(104deg, #050A27 0%, #4A548C 100%);
+  background: linear-gradient(104deg, #050a27 0%, #4a548c 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
